--- a/CSS/number/style.css
+++ b/CSS/number/style.css
@@ -1,7 +1,7 @@
 .move {
-    transform-origin: 50% top;
-    transform: rotateX(90deg);
-    transition: 10s;
+    transform-origin: 50% 0;
+    transform: rotateX(180deg);
+    transition: .5s linear;
 }
 
 .number {
